--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="/list-knights">Knights</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="/list-heroes">Heroes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About</a>
