--- a/src/app/list-heroes/list-heroes.component.html
+++ b/src/app/list-heroes/list-heroes.component.html
@@ -1,4 +1,6 @@
-
+<div class="jumbotron text-center">
+     <h1 class="red-title">Hall of Heroes</h1>
+</div>
 
 <div class="row content">
     <div class="col-lg-10 offset-lg-1">
