--- a/src/app/list-knights/list-knights.component.html
+++ b/src/app/list-knights/list-knights.component.html
@@ -1,4 +1,6 @@
-
+<div class="jumbotron text-center">
+    <h1 class="blue-title">The Knights</h1>
+</div>
 
 <div class="row content">
   <div class="col-lg-10 offset-lg-1">
