--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,13 +17,16 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/list-heroes">Heroes</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/create-knight">New Knight</a>
+      </li>
 
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Knights
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="/create-knight">Novo Knight</a>
+            <a class="dropdown-item" routerLink="/create-knight">New Knight</a>
             <a class="dropdown-item" routerLink="/list-knights">Knights</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" routerLink="/list-heroes">Hall of Heroes</a>
@@ -31,14 +34,9 @@
       </li>
 
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="#">About</a>
-      </li>
+
     </ul>
-    <!--form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form -->
+
   </div>
 </nav>
 
