--- a/src/app/list-heroes/list-heroes.component.html
+++ b/src/app/list-heroes/list-heroes.component.html
@@ -8,40 +8,30 @@
       <table id="knights" class="table table-hover table-striped">
         <thead class="thead-dark">
           <tr>
-            <th>Name</th>
-            <th>Nickname</th>
-            <th>Birthday</th>
-            <th>Age</th>
-            <th>Exp</th>
-            <th>Key Attribute</th>
-            <th>Attributes</th>
-            <th>Weapons</th>
+              <th></th>
+              <th>Name</th>
+              <th>Age</th>       
+              <th>Weapons</th>
+              <th>Key Attribute</th>
+              <th>Attack</th>
+              <th>Exp</th>
+              <th></th>
           </tr>
         </thead>
         <tbody >
-          <tr *ngFor="let k of heroes;">
+          <tr *ngFor="let h of heroes;let i = index;">
   
-            <td>{{k.name}}</td>
-            <td>{{k.nickname}} </td>
-            <td>{{k.birthday | date: "dd/MM/yyyy" }} </td>
-            <td>{{k.age}}</td>
-            <td>{{k.exp}}</td>
-            <td>{{k.keyAttribute}} </td>
+            <td>{{i + 1}} </td>
+            <td>{{h.name}}</td>
+            <td>{{h.age}}</td>
+            <td>{{h.weapons.length}}</td>
+            <td>{{h.keyAttribute}} </td>
+            <td>{{h.attack}} </td>
+            <td>{{h.exp}}</td>
+
             <td>
-                {{" Constitution: " + k.attributes.constitution}} 
-                {{" Dexterity: " + k.attributes.dexterity}} 
-                {{" Intelligence " + k.attributes.intelligence}} 
-                {{" Wisdom " + k.attributes.wisdom}} 
-                {{" Charisma " + k.attributes.charisma}}     
-            </td>
-            <td>
-                {{"Quant.:"}} {{k.weapons.length}}
-                {{", Name: "}} {{k.weapons[0].name}}
-                {{", Attr: "}} {{k.weapons[0].attr}}
-                {{", Mod: "}} {{k.weapons[0].mod}}
-                {{", Equipped: "}} {{k.weapons[0].equipped? 'Yes':'No'}}
-            </td>
-  
+                <a class="btn btn-default" routerLink="/get-hero/{{h._id}}"><span class="fa fa-search"></span></a>
+              </td>
           </tr>
         </tbody>
       </table>
@@ -51,10 +41,3 @@
   </div>
   
   
-  <script>
-  
-   $().ready( function () {
-      $('#knights').DataTable();
-    });
-  
-  </script>
