--- a/src/app/get-knight/get-knight.component.html
+++ b/src/app/get-knight/get-knight.component.html
@@ -69,11 +69,11 @@
  
 
    <button class='btn btn-success mr-1'>
-    <a routerLink="/update-knight/{{knight._id}}" class='white-link' >  <span class='fa fa-edit'></span> Update </a>
+    <a routerLink="/update-knight/{{knight._id}}" class='white-link' >  <span class='fa fa-edit'></span> Change Nickname </a>
    </button>
 
-   <button class='btn btn-success mr-1'>
-         <a routerLink="/delete-knight/{{knight._id}}" class='white-link'  onclick="return confirm('Delete Knight?');">  <span class='fa fa-trash-o'></span> Delete </a>
+   <button class='btn btn-danger mr-1'>
+         <a routerLink="/delete-knight/{{knight._id}}" class='white-link'  onclick="return confirm('Remove Knight?');">  <span class='fa fa-trash-o'></span> Remove </a>
    </button>
 
 
