--- a/src/app/create-knight/create-knight.component.html
+++ b/src/app/create-knight/create-knight.component.html
@@ -6,7 +6,7 @@
       <div class="form-group">
         <label for='_name'>Name:</label>
         <input type="text" id='_name' [(ngModel)]="knight.name" name="name" 
-          class="form-control" placeholder="Name: " />
+          class="form-control" placeholder="Name: " required />
       </div>
 
       <div class="form-group">
