--- a/src/app/list-heroes/list-heroes.component.html
+++ b/src/app/list-heroes/list-heroes.component.html
@@ -1,26 +1,29 @@
 <div class="jumbotron text-center">
-     <h1 class="red-title">Hall of Heroes</h1>
+  <h1 class="red-title">Hall of Heroes</h1>
 </div>
 
-<div class="row content">
+
+<div class="container">
+
+  <div class="row content">
     <div class="col-lg-10 offset-lg-1">
-  
+
       <table id="knights" class="table table-hover table-striped">
         <thead class="thead-dark">
           <tr>
-              <th></th>
-              <th>Name</th>
-              <th>Age</th>       
-              <th>Weapons</th>
-              <th>Key Attribute</th>
-              <th>Attack</th>
-              <th>Exp</th>
-              <th></th>
+            <th></th>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Weapons</th>
+            <th>Key Attribute</th>
+            <th>Attack</th>
+            <th>Exp</th>
+            <th></th>
           </tr>
         </thead>
-        <tbody >
+        <tbody>
           <tr *ngFor="let h of heroes;let i = index;">
-  
+
             <td>{{i + 1}} </td>
             <td>{{h.name}}</td>
             <td>{{h.age}}</td>
@@ -30,14 +33,15 @@
             <td>{{h.exp}}</td>
 
             <td>
-                <a class="btn btn-default" routerLink="/get-hero/{{h._id}}"><span class="fa fa-search"></span></a>
-              </td>
+              <a class="btn btn-default" routerLink="/get-hero/{{h._id}}"><span class="fa fa-search"></span></a>
+            </td>
           </tr>
         </tbody>
       </table>
-  
-  
+
+
     </div>
   </div>
-  
-  
+
+
+</div>
