--- a/src/app/list-knights/list-knights.component.html
+++ b/src/app/list-knights/list-knights.component.html
@@ -1,43 +1,44 @@
-
-
 <div class="jumbotron text-center">
-    <h1 class="blue-title">The Knights</h1>
+  <h1 class="blue-title">The Knights</h1>
 </div>
 
-<div class="row content">
-  <div class="col-lg-10 offset-lg-1">
+<div class="container">
 
-    <table id="knights" class="table table-hover table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th></th>
-          <th>Name</th>
-          <th>Age</th>       
-          <th>Weapons</th>
-          <th>Key Attribute</th>
-          <th>Attack</th>
-          <th>Exp</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody >
-        <tr *ngFor="let k of knights;let i = index;">
-          <td>{{i + 1}} </td>
-          <td>{{k.name}}</td>
-          <td>{{k.age}}</td>
-          <td>{{k.weapons.length}}</td>
-          <td>{{k.keyAttribute}} </td>
-          <td>{{k.attack}} </td>
-          <td>{{k.exp}}</td>
-          <td>
-            <a class="btn btn-default" routerLink="/get-knight/{{k._id}}"><span class="fa fa-search"></span></a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="row content">
+    <div class="col-lg-10 offset-lg-1">
+
+      <table id="knights" class="table table-hover table-striped">
+        <thead class="thead-dark">
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Weapons</th>
+            <th>Key Attribute</th>
+            <th>Attack</th>
+            <th>Exp</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let k of knights;let i = index;">
+            <td>{{i + 1}} </td>
+            <td>{{k.name}}</td>
+            <td>{{k.age}}</td>
+            <td>{{k.weapons.length}}</td>
+            <td>{{k.keyAttribute}} </td>
+            <td>{{k.attack}} </td>
+            <td>{{k.exp}}</td>
+            <td>
+              <a class="btn btn-default" routerLink="/get-knight/{{k._id}}"><span class="fa fa-search"></span></a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
 
+    </div>
   </div>
+
+
 </div>
-
-
