--- a/src/app/update-knight/update-knight.component.html
+++ b/src/app/update-knight/update-knight.component.html
@@ -1,56 +1,57 @@
 <div class="jumbotron text-center">
-    <h1 class="blue-title">{{knight.name | uppercase }}</h1>
+   <h1 class="blue-title">{{knight.name | uppercase }}</h1>
 </div>
 
-<div class="row content">
-    <div class="col-lg-6 offset-lg-1">
-  
-  
+<div class="container">
 
-           <div class="card ">
+   <div class="row content">
+      <div class="col-lg-6 offset-lg-1">
+
+
+
+         <div class="card ">
             <div class="card-header">
-                <p class="card-title">
-                    <strong>Knight {{knight.nickname}}</strong>
-                  </p>
+               <p class="card-title">
+                  <strong>Knight {{knight.nickname}}</strong>
+               </p>
             </div>
-            <div class='card-body'>        
-      
-      
-              <p>Name: {{knight.name}} </p>
-              <p>Nickname: {{knight.nickname}} </p>
-              <p>Birthday: {{knight.birthday | date: "dd/MM/yyyy" }}</p>
-              <p>Key Attribute: {{knight.keyAttribute}}</p>  
- 
+            <div class='card-body'>
 
-              <p>New Nickname:</p> 
-              <p>
-               <input type="text" [(ngModel)]="knight.nickname" name="nickname" 
-               class="form-control" placeholder="Nickname: " /> 
-              </p>
 
-      
+               <p>Name: {{knight.name}} </p>
+               <p>Nickname: {{knight.nickname}} </p>
+               <p>Birthday: {{knight.birthday | date: "dd/MM/yyyy" }}</p>
+               <p>Key Attribute: {{knight.keyAttribute}}</p>
+
+
+               <p>New Nickname:</p>
+               <p>
+                  <input type="text" [(ngModel)]="knight.nickname" name="nickname" class="form-control" placeholder="Nickname: " />
+               </p>
+
+
             </div>
-          </div>
+         </div>
 
 
 
 
 
-   <div class='mt-4'>
-  
-    <button (click)='back()' class='btn btn-success mr-1'>
-       <span class='fa fa-angle-double-left'></span> Go Back
-    </button>
-   
-  
-     <button class='btn btn-success mr-1' (click)="updateNickname()" >
-        <span class='fa edit-o'></span> Update 
-     </button>
+         <div class='mt-4'>
 
-  </div>
+            <button (click)='back()' class='btn btn-success mr-1'>
+               <span class='fa fa-angle-double-left'></span> Go Back
+            </button>
 
 
-     </div>
-  </div>
-  
-  
+            <button class='btn btn-success mr-1' (click)="updateNickname()">
+               <span class='fa edit-o'></span> Update
+            </button>
+
+         </div>
+
+
+      </div>
+   </div>
+
+</div>
